# vpars3

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TASK_LIST.md  README.md  claude_desktop_config.json  pyproject.toml  requirements.txt  test_mcp_config.json  test_mcp_server.py  test_minimal_mcp.py  test_simple_mcp.py
.github/workflows/: ci.yml
Archived Modification Engine/: README.md
Archived Modification Engine/components/: enhanced_field_detector.py  field_analyzer.py  pdf_modifier.py
Archived Modification Engine/documentation/: FIELD_DETECTION_IMPROVEMENT_SUMMARY.md  FIELD_ISSUES_RESOLUTION_SUMMARY.md  IMPROVEMENT_ROADMAP.md  MODIFICATION_SUMMARY.md
Archived Modification Engine/mcp_servers/: mcp_server.py  mcp_server_minimal.py  mcp_server_v2.py
Archived Modification Engine/scripts/: analyze_pdf_fields.py  apply_bem_mappings.py  create_accessible_mapping.py  create_comprehensive_mapping.py  create_corrected_mapping.py  extract_pdf_fields.py  verify_setup.py
Archived Modification Engine/tests/: conftest.py  test_field_extraction.py  test_mcp_server.py  test_pdf_modification.py
docs/: BEM_VALIDATION.md  QUICKSTART.md
examples/: sample_mappings.json
scripts/: pdf_bem_modifier.py
src/cli/: __init__.py  main.py
src/pdf_enrichment/: __init__.py  bem_naming.py  field_analyzer.py  field_types.py  mcp_server.py  mcp_server_minimal.py  mcp_server_simple.py  mcp_server_v2.py  pdf_modifier.py  preview_generator.py  utils.py
src/retool/: __init__.py
src/web/: __init__.py  app.py
tests/: conftest.py  test_bem_naming.py
